# reservation

./: .env  .gitignore  Cargo.toml  deny.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs  utils.rs
abi/src/error/: mod.rs
abi/src/pb/: mod.rs  reservation.rs
migrations/: 20221102011125_init.down.sql  20221103005430_reservation.down.sql  20221103005430_reservation.up.sql  20221103010206_reservation_trigger.down.sql  20221103010206_reservation_trigger.up.sql  20221124143051_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
