[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
prost = "0.11.2"
prost-types = "0.11.2"
sqlx = { version = "0.6.2", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
