[package]
edition = "2021"
name = "reservation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = {version = "0.1.0", path = "../abi"}
async-trait = "0.1.58"
chrono = {version = "0.4.23", features = ["serde"]}
sqlx = {version = "0.6.2", features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"]}
thiserror = "1.0.37"

[dev-dependencies]
sqlx-database-tester = {version = "0.4.2", features = ["runtime-tokio"]}
tokio = {version = "1.22.0", features = ["full"]}
